# PiAPI-Skills

./: .gitignore  .starter-meta.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  README.pt-BR.md  install.sh  pyproject.toml
.codex/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  markdown-link-check.json
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md
.github/workflows/: ci.yml  dod.yml  lint.yml
.specs/: README.md
.specs/architecture/: ADR-001-example.md  ADR-template.md  DESIGN.md  PATTERNS.md
.specs/product/: DOMAIN.md  PERSONAS.md  VISION.md
.specs/sprints/: BACKLOG.md
.specs/sprints/sprint-01/: 01-example.task.md  SPRINT.md
.specs/workflow/: CONTRIBUTING.md  RELEASE.md  WORKFLOW.md
agents/claude/: SKILL.md
agents/codex/: SKILL.md
agents/cursor/: SKILL.md
agents/generic/: SKILL.md
agents/hermes/: SKILL.md
agents/openclaw/: SKILL.md
agents/windsurf/: SKILL.md
cli/: cli.py  piapi-cli
examples/: 01-text-to-image-flux.md  02-midjourney-imagine-upscale.md  03-kling-image-to-video.md  04-suno-music.md  05-faceswap.md  06-hunyuan-video.md  07-llm-chat.md  08-webhooks.md
presentation/remotion-tutorial/: package.json  tsconfig.json
presentation/remotion-tutorial/src/: Root.tsx  Video.tsx  locale.ts  theme.ts
presentation/remotion-tutorial/src/components/: Background.tsx  Card.tsx  Terminal.tsx  Title.tsx
presentation/remotion-tutorial/src/scenes/: Agents.tsx  CLITour.tsx  Configure.tsx  Install.tsx  Intro.tsx  Models.tsx  Outro.tsx  WhatIsIt.tsx  Workflow.tsx
references/: errors.md  models.md  rate-limits.md  rest-api.md  webhooks.md
scripts/: verify-skill.sh
